<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/user" />

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/user"/>

    <EditText
        android:id="@+id/txtCPF"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/cpf"/>

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/tel"/>

    <EditText
        android:id="@+id/txtSize"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/tamanho"/>

    <Button
        android:id="@+id/btnAlterar"
        android:layout_width="162dp"
        android:layout_height="45dp"
        android:autoSizePresetSizes=""
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:text="ALTERAR DADOS" />

</LinearLayout>
